--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
         <meta name="description" content="Personal Portfolio Template" />
         <meta name="keywords" content="" />
         <meta name="author" content="Themesdesign" />
-        <title>Jayant Goel -Resume</title>
+        <title>Jayant Goel -The UnCrowned King</title>
 
         <link rel="shortcut icon" href="images/favicon.ico">
 
@@ -39,7 +39,7 @@
         <nav class="navbar navbar-expand-lg fixed-top navbar-custom sticky sticky-dark">
             <div class="container">
                 <!-- LOGO -->
-                <a class="navbar-brand logo text-uppercase" href="index.html">
+                <a class="navbar-brand logo text-uppercase" href="index2.html">
                         Jayant Goel
                     </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
