--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Personal Portfolio Template" />
     <meta name="keywords" content="" />
     <meta name="author" content="Themesdesign" />
-    <title>Jayant Goel -The UnCrowned King</title>
+    <title>Jayant Goel</title>
 
     <link rel="shortcut icon" href="images/favicon.ico">
 
@@ -39,8 +39,7 @@
 <nav class="navbar navbar-expand-lg fixed-top navbar-custom sticky sticky-dark">
     <div class="container">
         <!-- LOGO -->
-        <a class="navbar-brand logo text-uppercase" href="index1
-        .html">
+        <a class="navbar-brand logo text-uppercase" href="index.html">
             Jayant Goel
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -82,7 +81,9 @@
                             <h1 class="display-3"><span class="element text-white" data-elements="Jayant Goel, Data Science/Machine Learning Enthusiast, Full Stack Web Developer(MEAN), Android Developer,"></span></h1>
                             <p class="text-light mx-auto para-desc">I am  Third-year student pursuing a Bachelor of Technology in Computer Science Engineering from JIIT,sector 62 </p>
                             <div class="mt-4 pt-2">
-                                <a href="#" class="btn btn-outline btn-round">Download Resume <i class="mdi mdi-download ml-2"></i></a>
+                                <a target="_blank"
+                                   href="https://doc-04-7k-docs.googleusercontent.com/docs/securesc/oq4pm39ejg6f45c4khas5iuhsqvejp4q/t1aaag9hq1gk5bog71rb75qnknnms3bs/1610239950000/15585300431742238516/15585300431742238516/1_nKxuF9dBSklBbARRZhcFOJO18sRP8u3?e=download&authuser=0&nonce=clmhp99iaro1k&user=15585300431742238516&hash=kgv0r0lq51q5rot5afahq5i2iebc7j1g"
+                                   class="btn btn-outline btn-round">Download Resume <i class="mdi mdi-download ml-2"></i></a>
                             </div>
                         </div>
                     </div>
@@ -567,8 +568,7 @@
 </footer>
 <!-- footer end -->
 
-<!-- javascript -->
-<script src="js/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script src="js/bootstrap.bundle.min.js"></script>
 <script src="js/jquery.easing.min.js"></script>
 <script src="js/scrollspy.min.js"></script>
@@ -580,13 +580,19 @@
 <script src="js/portfolio.init.js"></script>
 <!-- Contact js -->
 <script src="js/contact.js"></script>
-<!-- Counter js -->
-<script src="js/counter.js"></script>
+
 <!-- Typed -->
 <script src="js/typed.js"></script>
 <script src="js/typed.init.js"></script>
 <!-- custom -->
 <script src="js/app.js"></script>
+<script>
+    $('#topheader .navbar-nav a' ).on('click',
+        function () {
+            $( '#topheader .navbar-nav' ).find( 'li.active' ).removeClass( 'active' );
+            $( this ).parent( 'li' ).addClass( 'active' );
+        });
+</script>
 </body>
 
 </html>
