--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <div class="home-title text-center">
                             <h5 class="text-white-50 sub-title mb-3 font-weight-normal">Student</h5>
                             <h1 class="display-3"><span class="element text-white" data-elements="Jayant Goel, Data Science/Machine Learning Enthusiast, Full Stack Web Developer(MEAN), Android Developer,"></span></h1>
-                            <p class="text-light mx-auto para-desc">I am  Third-year student pursuing a Bachelor of Technology in Computer Science Engineering from JIIT,sector 62 </p>
+                            <p class="text-light mx-auto para-desc">I am  Third-year student pursuing a Bachelor of Technology in Computer Science Engineering from Jaypee Institute Of Information Technology, <br> Sector 62 </p>
                             <div class="mt-4 pt-2">
                                 <a target="_blank"
                                    href="https://doc-04-7k-docs.googleusercontent.com/docs/securesc/oq4pm39ejg6f45c4khas5iuhsqvejp4q/t1aaag9hq1gk5bog71rb75qnknnms3bs/1610239950000/15585300431742238516/15585300431742238516/1_nKxuF9dBSklBbARRZhcFOJO18sRP8u3?e=download&authuser=0&nonce=clmhp99iaro1k&user=15585300431742238516&hash=kgv0r0lq51q5rot5afahq5i2iebc7j1g"
@@ -587,9 +587,9 @@
 <!-- custom -->
 <script src="js/app.js"></script>
 <script>
-    $('#topheader .navbar-nav a' ).on('click',
+    $('.navbar-nav a' ).on('click',
         function () {
-            $( '#topheader .navbar-nav' ).find( 'li.active' ).removeClass( 'active' );
+            $( ' .navbar-nav' ).find( 'li.active' ).removeClass( 'active' );
             $( this ).parent( 'li' ).addClass( 'active' );
         });
 </script>
