--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
+    <script src="https://kit.fontawesome.com/b82917e056.js" crossorigin="anonymous"></script>
+
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
 
@@ -555,12 +557,39 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="text-center mt-5 mb-5">
-                    <h4 class="mb-4 logo"><a href="#" class="text-dark">Jayant Goel</a></h4>
                     <ul class="social-icons mb-4 list-inline">
-                        <li class="list-inline-item"><a href="https://www.instagram.com/jayantgoel001/" class=""><i class="mdi mdi-instagram"></i></a></li>
-                        <li class="list-inline-item"><a href="https://www.linkedin.com/in/jayant-goel-a136861b9/" class=""><i class="mdi mdi-linkedin"></i></a></li>
+                        <li class="list-inline-item">
+                            <a href="https://github.com/JayantGoel001/" target="_blank">
+                                <i class="fab fa-github dark"></i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://gist.github.com/JayantGoel001/" target="_blank">
+                                <img src="images/gist.png" width="20px" height="20px" alt="">
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://www.linkedin.com/in/jayant-goel-a136861b9/" target="_blank">
+                                <i class="mdi mdi-linkedin dark"></i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://www.instagram.com/jayantgoel001/" target="_blank">
+                                <i class="mdi mdi-instagram dark"></i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://www.facebook.com/jayant.goel.12/" target="_blank">
+                                <i class="fab fa-facebook dark"></i>
+                            </a>
+                        </li>
+                        <li class="list-inline-item">
+                            <a href="https://twitter.com/JayantGoel6" target="_blank">
+                                <i class="fab fa-twitter dark" ></i>
+                            </a>
+                        </li>
                     </ul>
-                    <p class="copyright-desc text-muted mb-0">Designed with <i class="mdi mdi-heart text-danger"></i>by Jayant</p>
+                    <p class="copyright-desc text-muted mb-0 font-weight-bold">Designed with <i class="mdi mdi-heart text-danger"></i> By Jayant Goel</p>
                 </div>
             </div>
         </div>
