--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             <div class="mt-4 pt-2">
                                 <a target="_blank"
                                    href="https://doc-04-7k-docs.googleusercontent.com/docs/securesc/oq4pm39ejg6f45c4khas5iuhsqvejp4q/t1aaag9hq1gk5bog71rb75qnknnms3bs/1610239950000/15585300431742238516/15585300431742238516/1_nKxuF9dBSklBbARRZhcFOJO18sRP8u3?e=download&authuser=0&nonce=clmhp99iaro1k&user=15585300431742238516&hash=kgv0r0lq51q5rot5afahq5i2iebc7j1g"
-                                   class="btn btn-outline btn-round">Download Resume <i class="mdi mdi-download ml-2"></i></a>
+                                   class="btn btn-outline btn-round">Download Resume <i class="fas fa-download ml-2"></i></a>
                             </div>
                         </div>
                     </div>
