--- a/index.html
+++ b/index.html
@@ -248,19 +248,19 @@
                                     <div style="text-align: center">
                                         <div>
                                             <h6>Bachelor of Technology (B.Tech), Computer Science</h6>
-                                            <p class="text-muted">Maharaja Agrasen Institute of Technology, 2017 - 2021 <br> CGPA: 7.7/10 </p>
+                                            <p class="text-muted">Jaypee Institute Of Information Technology, 2018 - 2022 <br> </p>
                                             <hr class="mt-4 mb-4">
                                         </div>
                                         <div>
                                             <h6>XII (Senior Secondary), Science</h6>
-                                            <p class="text-muted">DAV, Sreshtha Vihar (CBSE Board) <br>
-                                                Year of Completion: 2017 <br> Percentage: 90%</p>
+                                            <p class="text-muted">Holy Trinity Church School, Ghaziabad (ISC Board) <br>
+                                                Year of Completion: 2018 <br> Percentage: 91% </p>
                                             <hr class="mt-4 mb-4">
                                         </div>
                                         <div>
                                             <h6>X (Secondary)</h6>
-                                            <p class="text-muted">Delhi Public School, Indirapuram (CBSE Board) <br>
-                                                Year of Completion: 2015 <br> CGPA: 10/10</p>
+                                            <p class="text-muted">Holy Trinity Church School, Ghaziabad (ICSE Board) <br>
+                                                Year of Completion: 2016 <br> Percentage: 92.20% </p>
                                             <hr class="mt-4 mb-4">
                                         </div>
                                     </div>
@@ -520,7 +520,7 @@
                         <i class="mdi mdi-map-marker text-custom h3"></i>
                     </div>
                     <div class="contact-details">
-                        <p class="mb-0">Ghaziabad, Uttar Pradesh, India</p>
+                        <p class="mb-0" style="color: white">Ghaziabad, Uttar Pradesh, India</p>
                     </div>
                 </div>
             </div>
@@ -530,8 +530,8 @@
                         <i class="mdi mdi-phone-classic text-custom h3"></i>
                     </div>
                     <div class="contact-details">
-                        <p class="mb-0">+91-8377838183</p>
-                        <p class="mb-0">+91-8076331756</p>
+                        <p class="mb-0"><a href="tel:+91-8377838183" style="color: white">+91-8377838183</a></p>
+                        <p class="mb-0"><a href="tel:+91-8076331756" style="color: white">+91-8076331756</a></p>
                     </div>
                 </div>
             </div>
@@ -541,7 +541,7 @@
                         <i class="mdi mdi-email-outline text-custom h3"></i>
                     </div>
                     <div class="contact-details">
-                        <p class="mb-0">jgoel92@gmail.com</p>
+                        <p class="mb-0"><a href="mailto: jgoel92@gmail.com" style="color: white">jgoel92@gmail.com</a></p>
                     </div>
                 </div>
             </div>
