--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                                     <div style="text-align: center">
                                         <div>
                                             <h6>Bachelor of Technology (B.Tech), Computer Science</h6>
-                                            <p class="text-muted">Jaypee Institute Of Information Technology, 2018 - 2022 <br> </p>
+                                            <p class="text-muted">Jaypee Institute Of Information Technology, Sector-62 <br>2018 - 2022 </p>
                                             <hr class="mt-4 mb-4">
                                         </div>
                                         <div>
@@ -589,6 +589,7 @@
                             </a>
                         </li>
                     </ul>
+                    <br>
                     <p class="copyright-desc text-muted mb-0 font-weight-bold">Designed with <i class="mdi mdi-heart text-danger"></i> By Jayant Goel</p>
                 </div>
             </div>
