--- a/index.html
+++ b/index.html
@@ -129,9 +129,13 @@
                             <div class="about-img mt-5 mb-5">
                                 <img src="images/Profile-pic.jpg" alt="" class="img-fluid mx-auto d-block rounded-circle">
                             </div>
-                            <h3 class="mb-3">Jayant Goel <small class="text-muted"> -Full Stack Web Developer & ML Enthusiast </small></h3>
-                            <p class="text-muted">Currently working as an NLP intern at HumLife360, creating a chatbot for diabetes and working on entity recognition from phone calls. It's a US based company and the app will be launched in July. Experienced in Dialogflow, sentiment analysis, reinforcement learning, clustering, classification and neural networks. Also did an intenship which was AICTE approved and partnered by intel where I had to analyse stocks. Also working on deploying ML Models using Django.  </p>
-                            <p class="text-muted">Worked on tools: Scikit-Learn, Numpy, Pandas, Keras. Also, done projects on GANs, LSTMs, Auto Encoders, Convolutions etc. </p>
+                            <h3 class="mb-3">Jayant Goel
+                                <small class="text-muted"> - Full Stack Web Developer, Android & Data Science Enthusiast </small>
+                            </h3>
+                            <p class="text-muted">
+                                Currently working as an NLP intern at HumLife360, creating a chatbot for diabetes and working on entity recognition from phone calls. It's a US based company and the app will be launched in July. Experienced in Dialogflow, sentiment analysis, reinforcement learning, clustering, classification and neural networks. Also did an intenship which was AICTE approved and partnered by intel where I had to analyse stocks. Also working on deploying ML Models using Django.  </p>
+                            <p class="text-muted">
+                                Worked on tools: Scikit-Learn, Numpy, Pandas, Keras. Also, done projects on GANs, LSTMs, Auto Encoders, Convolutions etc. </p>
                             <div class="mt-5">
                                 <a href="#" class="btn btn-outline btn-round">Read more</a>
                             </div>
@@ -144,14 +148,14 @@
                                     <div>
                                         <p class="text-muted text-uppercase mb-2">Machine Learning</p>
                                         <div class="progress">
-                                            <div class="progress-bar" style="width:95%;">
-                                                <div class="progress-value text-muted">95%</div>
+                                            <div class="progress-bar" style="width:90%;">
+                                                <div class="progress-value text-muted">90%</div>
                                             </div>
                                         </div>
                                     </div>
 
                                     <div class="mt-5">
-                                        <p class="text-muted text-uppercase mb-2">Neural Networks </p>
+                                        <p class="text-muted text-uppercase mb-2">Data Science</p>
                                         <div class="progress">
                                             <div class="progress-bar" style="width:90%;">
                                                 <div class="progress-value text-muted">90%</div>
@@ -160,14 +164,61 @@
                                     </div>
 
                                     <div class="mt-5">
-                                        <p class="text-muted text-uppercase mb-2">NLP</p>
+                                        <p class="text-muted text-uppercase mb-2">Android</p>
                                         <div class="progress">
-                                            <div class="progress-bar" style="width:80%;">
-                                                <div class="progress-value text-muted">80%</div>
+                                            <div class="progress-bar" style="width:90%;">
+                                                <div class="progress-value text-muted">90%</div>
                                             </div>
                                         </div>
                                     </div>
 
+                                    <div class="mt-5">
+                                        <p class="text-muted text-uppercase mb-2">Kotlin</p>
+                                        <div class="progress">
+                                            <div class="progress-bar" style="width:90%;">
+                                                <div class="progress-value text-muted">90%</div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="mt-5">
+                                        <p class="text-muted text-uppercase mb-2">JAVA</p>
+                                        <div class="progress">
+                                            <div class="progress-bar" style="width:85%;">
+                                                <div class="progress-value text-muted">85%</div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="mt-5">
+                                        <p class="text-muted text-uppercase mb-2">MEAN Stack Development</p>
+                                        <div class="progress">
+                                            <div class="progress-bar" style="width:70%;">
+                                                <div class="progress-value text-muted">70%</div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="col-lg-6">
+                                <div class="skill">
+                                    <div class="mt-5">
+                                        <p class="text-muted text-uppercase mb-2">C++</p>
+                                        <div class="progress">
+                                            <div class="progress-bar" style="width:90%;">
+                                                <div class="progress-value text-muted">90%</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="mt-5">
+                                        <p class="text-muted text-uppercase mb-2">Python</p>
+                                        <div class="progress">
+                                            <div class="progress-bar" style="width:95%;">
+                                                <div class="progress-value text-muted">95%</div>
+                                            </div>
+                                        </div>
+                                    </div>
 
                                     <div class="mt-5">
                                         <p class="text-muted text-uppercase mb-2">HTML</p>
@@ -181,53 +232,25 @@
                                     <div class="mt-5">
                                         <p class="text-muted text-uppercase mb-2">CSS</p>
                                         <div class="progress">
+                                            <div class="progress-bar" style="width:80%;">
+                                                <div class="progress-value text-muted">80%</div>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="mt-5">
+                                        <p class="text-muted text-uppercase mb-2">Javascript</p>
+                                        <div class="progress">
                                             <div class="progress-bar" style="width:85%;">
                                                 <div class="progress-value text-muted">85%</div>
                                             </div>
                                         </div>
                                     </div>
-
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="skill">
                                     <div class="mt-5">
-                                        <p class="text-muted text-uppercase mb-2">C++</p>
+                                        <p class="text-muted text-uppercase mb-2">Git/GitHub</p>
                                         <div class="progress">
-                                            <div class="progress-bar" style="width:95%;">
-                                                <div class="progress-value text-muted">95%</div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="mt-5">
-                                        <p class="text-muted text-uppercase mb-2">Python</p>
-                                        <div class="progress">
-                                            <div class="progress-bar" style="width:95%;">
-                                                <div class="progress-value text-muted">95%</div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="mt-5">
-                                        <p class="text-muted text-uppercase mb-2">Javascript</p>
-                                        <div class="progress">
-                                            <div class="progress-bar" style="width:75%;">
-                                                <div class="progress-value text-muted">75%</div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="mt-5">
-                                        <p class="text-muted text-uppercase mb-2">Django</p>
-                                        <div class="progress">
-                                            <div class="progress-bar" style="width:70%;">
-                                                <div class="progress-value text-muted">70%</div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="mt-5">
-                                        <p class="text-muted text-uppercase mb-2">Bootstrap</p>
-                                        <div class="progress">
-                                            <div class="progress-bar" style="width:70%;">
-                                                <div class="progress-value text-muted">70%</div>
+                                            <div class="progress-bar" style="width:90%;">
+                                                <div class="progress-value text-muted">90%</div>
                                             </div>
                                         </div>
                                     </div>
