--- a/index.html
+++ b/index.html
@@ -133,9 +133,12 @@
                                 <small class="text-muted"> - Full Stack Web Developer, Android & Data Science Enthusiast </small>
                             </h3>
                             <p class="text-muted">
-                                Currently working as an NLP intern at HumLife360, creating a chatbot for diabetes and working on entity recognition from phone calls. It's a US based company and the app will be launched in July. Experienced in Dialogflow, sentiment analysis, reinforcement learning, clustering, classification and neural networks. Also did an intenship which was AICTE approved and partnered by intel where I had to analyse stocks. Also working on deploying ML Models using Django.  </p>
+                                An Enthusiast Coder Eager to contribute to team success through hard work, skills, attention to details and excellent organizational skills.
+                                Currently Exploring the world of Technology as SDE Intern at Talent Decrypt and as a student at Jaypee Institute Of Information Technology.
+                                Recently worked as Android Developer At Theatron for 7 months.
+                            </p>
                             <p class="text-muted">
-                                Worked on tools: Scikit-Learn, Numpy, Pandas, Keras. Also, done projects on GANs, LSTMs, Auto Encoders, Convolutions etc. </p>
+                                <strong>IDE & Editors Used</strong> : Android Studio, Intellij, PyCharm , WebStorm, CLion, PHPStorm, Anaconda Navigator, Atom, Python 3.8 </p>
                             <div class="mt-5">
                                 <a href="#" class="btn btn-outline btn-round">Read more</a>
                             </div>
