--- a/index.html
+++ b/index.html
@@ -137,11 +137,7 @@
                                 Currently Exploring the world of Technology as SDE Intern at Talent Decrypt and as a student at Jaypee Institute Of Information Technology.
                                 Recently worked as Android Developer At Theatron for 7 months.
                             </p>
-                            <p class="text-muted">
-                                <strong>IDE & Editors Used</strong> : Android Studio, Intellij, PyCharm , WebStorm, CLion, PHPStorm, Anaconda Navigator, Atom, Python 3.8 </p>
-                            <div class="mt-5">
-                                <a href="#" class="btn btn-outline btn-round">Read more</a>
-                            </div>
+                            <p class="text-muted"><strong>IDE & Editors Used</strong> : Android Studio, Intellij, PyCharm , WebStorm, CLion, PHPStorm, Anaconda Navigator, Atom, Python 3.8 </p>
                         </div>
                     </div>
                     <div class="tab-pane fade" id="skill" role="tabpanel" aria-labelledby="skill-tab">
@@ -321,18 +317,25 @@
                 <div class="services-flip-box mt-4 pt-2">
                     <div class="services-front-flip bg-white text-center p-5">
                         <div class="services-desc">
-                            <h5 class="mb-3">Web Design</h5>
-                            <p class="text-muted mb-0">Specialization - Coursera(University of Michigan)</p>
+                            <h5 class="mb-3">Theatron</h5>
+                            <p class="text-muted mb-0"> Android Development Internship</p>
                         </div>
                     </div>
                     <div class="services-back-flip text-center bg-custom text-white p-5">
                         <div class="services-desc">
-                            <i> This specialization had 5 courses: HTML5, CSS3, Javascript, Advanced Styling with responsive design + Bootstrap, and a capstone project in which I made a web page independently.
-                                It covered all aspects of front-end web development. </i>
+                            <a href="https://drive.google.com/file/d/1Ahg2Gzz8oLBs495N4PT9a1fszNBcJUB9/view?usp=sharing"
+                               target="_blank" class="btn btn-round p-2"
+                               style="background: white;color: #ff9800;box-shadow: none">Certificate Link</a>
+                            <br>
+                            <br>
+                            <i>
+                                Theatron is platform which provides environment of entertainment for which I created An Android Application using Kotlin with Firebase as Backend and Deployed It On Play Store.
+                            </i>
                         </div>
                     </div>
                 </div>
             </div>
+
             <div class="col-lg-4">
                 <div class="services-flip-box mt-4 pt-2">
                     <div class="services-front-flip bg-white text-center p-5">
@@ -523,7 +526,6 @@
     </div>
 </section>
 <!-- portfolio end -->
-
 
 <!-- contact start -->
 <section class="section contact-wrapper bg-contact" id="contact">
