--- a/index.html
+++ b/index.html
@@ -318,37 +318,44 @@
                     <div class="services-front-flip bg-white text-center p-5">
                         <div class="services-desc">
                             <h5 class="mb-3">Theatron</h5>
-                            <p class="text-muted mb-0"> Android Development Internship</p>
+                            <p class="text-muted mb-0">Internship - Android Development</p>
+                            <p class="text-muted mb-0"> 10 Feb, 2020 - 30 Sept, 2020</p>
                         </div>
                     </div>
                     <div class="services-back-flip text-center bg-custom text-white p-5">
                         <div class="services-desc">
-                            <a href="https://drive.google.com/file/d/1Ahg2Gzz8oLBs495N4PT9a1fszNBcJUB9/view?usp=sharing"
-                               target="_blank" class="btn btn-round p-2"
-                               style="background: white;color: #ff9800;box-shadow: none">Certificate Link</a>
-                            <br>
-                            <br>
                             <i>
                                 Theatron is platform which provides environment of entertainment for which I created An Android Application using Kotlin with Firebase as Backend and Deployed It On Play Store.
                             </i>
+                            <br>
+                            <br>
+                            <a href="https://drive.google.com/file/d/1Ahg2Gzz8oLBs495N4PT9a1fszNBcJUB9/view?usp=sharing"
+                               target="_blank" class="btn btn-round p-2"
+                               style="background: white;color: #ff9800;box-shadow: none">Certificate Link</a>
                         </div>
                     </div>
                 </div>
             </div>
 
             <div class="col-lg-4">
-                <div class="services-flip-box mt-4 pt-2">
+                <div class="services-flip-box mt-4 pt-1">
                     <div class="services-front-flip bg-white text-center p-5">
                         <div class="services-desc">
-                            <h5 class="mb-3">Machine Learning & Deep Learning </h5>
-                            <p class="text-muted mb-0">Project based classroom training - Coding Elements (By Mr. Mudit Goel)</p>
+                            <h5 class="mb-3">Android Development Using Kotlin </h5>
+                            <p class="text-muted mb-0">Classroom training - Coding Blocks</p>
+                            <p class="text-muted mb-0">21 Aug, 2019 - 17 Dec, 2019</p>
                         </div>
                     </div>
                     <div class="services-back-flip text-center bg-custom text-white p-5">
                         <div class="services-desc">
                             <div class="services-icon">
-                                <i>The training included the practical application of ML and DL and was project based. I made a lot of projects on NEURAL NETWORKS, NLP, COMPUTER VISION, LSTMs, OPENCV, KERAS, GANs etc.
+                                <i>The training included the basics and practical application of Android Development. I made a lot of projects on Integrating API's and Implementing Firebase in Android.
                                 </i>
+                                <br>
+                                <br>
+                                <a href="https://drive.google.com/file/d/1lSc9it--0LooJpp6A7riggSFZPVq2vn6/view?usp=sharing"
+                                   target="_blank" class="btn btn-round p-2"
+                                   style="background: white;color: #ff9800;box-shadow: none">Certificate Link</a>
                             </div>
                         </div>
                     </div>
@@ -358,13 +365,19 @@
                 <div class="services-flip-box mt-4 pt-2">
                     <div class="services-front-flip bg-white text-center p-5">
                         <div class="services-desc">
-                            <h5 class="mb-3">Machine Learning (A-Z)</h5>
-                            <p class="text-muted mb-0">Course - Udemy</p>
+                            <h5 class="mb-3">Data Science</h5>
+                            <p class="text-muted mb-0">Classroom/Live Course - Coding Blocks</p>
+                            <p class="text-muted mb-0">29 Dec, 2019 - 05 May, 2020</p>
                         </div>
                     </div>
                     <div class="services-back-flip text-center bg-custom text-white p-5">
                         <div class="services-desc">
-                            <i> This course covered all the intuitions and theoretical aspects of machine learning which included all the types of classifications, boosting etc. </i>
+                            <i> This course covered all the intuitions and theoretical aspects of Machine Learning and Data Science which included all the types of classifications, regression, Neural Network etc. </i>
+                            <br>
+                            <br>
+                            <a href="https://drive.google.com/file/d/1lZmX1wmZLo8ksY6NsrFM9cNfL8HWdMBn/view?usp=sharing"
+                               target="_blank" class="btn btn-round p-2"
+                               style="background: white;color: #ff9800;box-shadow: none">Certificate Link</a>
                         </div>
                     </div>
                 </div>
