--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                             <p class="text-muted mb-0"> 10 Feb, 2020 - 30 Sept, 2020</p>
                         </div>
                     </div>
-                    <div class="services-back-flip text-center bg-custom text-white p-5">
+                    <div class="services-back-flip text-center bg-custom text-white p-4">
                         <div class="services-desc">
                             <i>
                                 Theatron is platform which provides environment of entertainment for which I created An Android Application using Kotlin with Firebase as Backend and Deployed It On Play Store.
@@ -336,17 +336,16 @@
                     </div>
                 </div>
             </div>
-
             <div class="col-lg-4">
                 <div class="services-flip-box mt-4 pt-1">
                     <div class="services-front-flip bg-white text-center p-5">
                         <div class="services-desc">
                             <h5 class="mb-3">Android Development Using Kotlin </h5>
-                            <p class="text-muted mb-0">Classroom training - Coding Blocks</p>
+                            <p class="text-muted mb-0">Classroom Training - Coding Blocks</p>
                             <p class="text-muted mb-0">21 Aug, 2019 - 17 Dec, 2019</p>
                         </div>
                     </div>
-                    <div class="services-back-flip text-center bg-custom text-white p-5">
+                    <div class="services-back-flip text-center bg-custom text-white p-4">
                         <div class="services-desc">
                             <div class="services-icon">
                                 <i>The training included the basics and practical application of Android Development. I made a lot of projects on Integrating API's and Implementing Firebase in Android.
@@ -366,11 +365,11 @@
                     <div class="services-front-flip bg-white text-center p-5">
                         <div class="services-desc">
                             <h5 class="mb-3">Data Science</h5>
-                            <p class="text-muted mb-0">Classroom/Live Course - Coding Blocks</p>
+                            <p class="text-muted mb-0">Classroom/Live Training - Coding Blocks</p>
                             <p class="text-muted mb-0">29 Dec, 2019 - 05 May, 2020</p>
                         </div>
                     </div>
-                    <div class="services-back-flip text-center bg-custom text-white p-5">
+                    <div class="services-back-flip text-center bg-custom text-white p-4">
                         <div class="services-desc">
                             <i> This course covered all the intuitions and theoretical aspects of Machine Learning and Data Science which included all the types of classifications, regression, Neural Network etc. </i>
                             <br>
@@ -388,13 +387,19 @@
                 <div class="services-flip-box mt-4 pt-2">
                     <div class="services-front-flip bg-white text-center p-5">
                         <div class="services-desc">
-                            <h5 class="mb-3">Machine Learning & Artificial Intelligence</h5>
-                            <p class="text-muted mb-0"> Workshop - IIT Delhi (Robotech Labs) </p>
+                            <h5 class="mb-3">The Complete 2020 Web Developer Master Course</h5>
+                            <p class="text-muted mb-0"> Online Training - Udemy </p>
+                            <p class="text-muted mb-0"> 1 July, 2020 - 25 Aug, 2020 </p>
                         </div>
                     </div>
-                    <div class="services-back-flip text-center bg-custom text-white p-5">
+                    <div class="services-back-flip text-center bg-custom text-white p-4">
                         <div class="services-desc">
-                            <i> This workshop covered all the advanced and basic topics and helped in getting a good grasp of various subjects. </i>
+                            <i>Complete Web Development course which focused on both Front and Back-end Development, with an emphasis on the MEAN Stack.</i>
+                            <br>
+                            <br>
+                            <a href="https://drive.google.com/file/d/12THg9_3-KtjSRe7pLfw27_pqwkDtSQMx/view?usp=sharing"
+                               target="_blank" class="btn btn-round p-2"
+                               style="background: white;color: #ff9800;box-shadow: none">Certificate Link</a>
                         </div>
                     </div>
                 </div>
@@ -403,14 +408,20 @@
                 <div class="services-flip-box mt-4 pt-2">
                     <div class="services-front-flip bg-white text-center p-5">
                         <div class="services-desc">
-                            <h5 class="mb-3">Python with Machine Learning</h5>
-                            <p class="text-muted mb-0">GSS Bootcamp - DTU (By Uday Upreti)</p>
+                            <h5 class="mb-3">Python Bootcamp 2020 Build 15 Working Applications And Games </h5>
+                            <p class="text-muted mb-0">Online Course - Udemy</p>
+                            <p class="text-muted mb-0">15 Oct, 2020 - 27 Dec, 2020</p>
                         </div>
                     </div>
-                    <div class="services-back-flip text-center bg-custom text-white p-5">
+                    <div class="services-back-flip text-center bg-custom text-white p-4">
                         <div class="services-desc">
                             <div class="services-icon">
-                                <i>The bootcamp served as a window for me for the Machine Learning course, as I had already done Python and it helped me to start applying my knowledge in it.</i>
+                                <i>The bootcamp served as a window for me for the Advanced Python course, as I had already done Python and it helped me to start applying my knowledge in more Advance and GUI Part.</i>
+                                <br>
+                                <br>
+                                <a href="https://drive.google.com/file/d/1AdmAM40vQ_mfzz7pVUcUea2S38E6Epuz/view?usp=sharing"
+                                   target="_blank" class="btn btn-round p-2"
+                                   style="background: white;color: #ff9800;box-shadow: none">Certificate Link</a>
                             </div>
                         </div>
                     </div>
@@ -420,12 +431,18 @@
                 <div class="services-flip-box mt-4 pt-2">
                     <div class="services-front-flip bg-white text-center p-5">
                         <div class="services-desc">
-                            <h5 class="mb-3">Introduction to Python</h5>
-                            <p class="text-muted mb-0">Online course - Udacity</p>
+                            <h5 class="mb-3">Data Structure and Algorithm With Java Bootcamp</h5>
+                            <p class="text-muted mb-0">Bootcamp - Code For Cause</p>
+                            <p class="text-muted mb-0"></p>
                         </div>
                     </div>
-                    <div class="services-back-flip text-center bg-custom text-white p-5">
-                        <i>For creating a strong base in Machine Learning, I did a course on Python Programming in the first year of my B.Tech.</i>
+                    <div class="services-back-flip text-center bg-custom text-white p-4">
+                        <i></i>
+                        <br>
+                        <br>
+                        <a href=""
+                           target="_blank" class="btn btn-round p-2"
+                           style="background: white;color: #ff9800;box-shadow: none">Certificate Link</a>
                     </div>
                 </div>
             </div>
@@ -614,6 +631,8 @@
                                 <i class="mdi mdi-linkedin dark"></i>
                             </a>
                         </li>
+                        <br/>
+                        <br/>
                         <li class="list-inline-item">
                             <a href="https://www.instagram.com/jayantgoel001/" target="_blank">
                                 <i class="mdi mdi-instagram dark"></i>
