--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Personal Portfolio Template" />
     <meta name="keywords" content="" />
     <meta name="author" content="Themesdesign" />
-    <title>Jayant Goel</title>
+    <title>Jayant Goel ♠ </title>
 
     <link rel="shortcut icon" href="images/favicon.ico">
 
@@ -37,7 +37,6 @@
 
 <body>
 
-<!--Navbar Start-->
 <nav class="navbar navbar-expand-lg fixed-top navbar-custom sticky sticky-dark">
     <div class="container">
         <!-- LOGO -->
@@ -68,9 +67,7 @@
         </div>
     </div>
 </nav>
-<!-- Navbar End -->
 
-<!-- home start -->
 <section class="bg-home" id="home" style="background-image: url('images/bgimg.jpg')">
     <div class="bg-overlay"></div>
     <div class="home-center">
@@ -94,9 +91,7 @@
         </div>
     </div>
 </section>
-<!-- home end -->
 
-<!-- about start -->
 <section class="section" id="about">
     <div class="container">
         <div class="row justify-content-center">
@@ -296,9 +291,7 @@
     </div>
 
 </section>
-<!-- about end -->
 
-<!-- services start -->
 <section class="section bg-light" id="trainings">
     <div class="container">
         <div class="row justify-content-center">
@@ -451,9 +444,7 @@
         </div>
     </div>
 </section>
-<!-- services end -->
 
-<!-- portfolio start -->
 <section class="section" id="portfolio">
     <div class="container">
         <div class="row justify-content-center">
@@ -557,9 +548,7 @@
 
     </div>
 </section>
-<!-- portfolio end -->
 
-<!-- contact start -->
 <section class="section contact-wrapper bg-contact" id="contact">
     <div class="container">
         <div class="row justify-content-center">
@@ -609,9 +598,7 @@
     </div>
 
 </section>
-<!-- contact end -->
 
-<!-- footer start -->
 <footer class="footer bg-light">
     <div class="container">
         <div class="row">
