--- a/index.html
+++ b/index.html
@@ -459,86 +459,81 @@
             </div>
         </div>
 
-        <!-- Gallary -->
         <div class="row container-grid projects-wrapper mt-4 pt-2">
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box mt-2">
-                    <a href="https://drive.google.com/open?id=1B_RsXMibFGEjNU6tPx9JqlvfpUF9kaLS" title="">
-                        <img class="item-container img-fluid mx-auto" src="images/GAN.png" alt="1" />
+                    <a href="" title="">
+                        <img class="item-container img-fluid mx-auto" src="images/" alt="1" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
-                                <h5>Generative adversarial networks</h5>
-                                <p class="text-uppercase">Using mnist dataset, created generators and discriminators to create new data.</p>
+                                <h5></h5>
+                                <p class="text-uppercase"></p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-lg-4 spacing branding designing development">
+                <div class="item-box mt-2">
+                    <a href="" title="">
+                        <img class="item-container img-fluid mx-auto" src="images/" alt="1" />
+                        <div class="item-mask">
+                            <div class="item-caption text-white text-center">
+                                <h5></h5>
+                                <p class="text-uppercase"></p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-lg-4 spacing branding designing development">
+                <div class="item-box mt-2">
+                    <a href="" title="">
+                        <img class="item-container img-fluid mx-auto" src="images/" alt="1" />
+                        <div class="item-mask">
+                            <div class="item-caption text-white text-center">
+                                <h5></h5>
+                                <p class="text-uppercase"></p>
                             </div>
                         </div>
                     </a>
                 </div>
             </div>
 
-            <div class="col-lg-4 spacing photography">
+            <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box mt-2">
-                    <a href="https://drive.google.com/open?id=1Abup6Ds2mOAh391_I97eacfoJGJnmWuD" title="">
-                        <img class="item-container img-fluid mx-auto" src="images/K-Means.png" alt="2" />
+                    <a href="" title="">
+                        <img class="item-container img-fluid mx-auto" src="images/" alt="1" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
-                                <h5>K-Means</h5>
-                                <p class="text-uppercase">Calculated means of 3 clusters created by random multivariate normal data.</p>
+                                <h5></h5>
+                                <p class="text-uppercase"></p>
                             </div>
                         </div>
                     </a>
                 </div>
             </div>
-
-            <div class="col-lg-4 spacing branding development">
+            <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box mt-2">
-                    <a href="https://drive.google.com/open?id=1tzcBlPH9dR7dKD54kNzEQb1a0Yjvvkv0" title="">
-                        <img class="item-container img-fluid mx-auto" src="images/Open-AI.png" alt="4" />
+                    <a href="" title="">
+                        <img class="item-container img-fluid mx-auto" src="images/" alt="1" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
-                                <h5>Open-AI Gym</h5>
-                                <p class="text-uppercase">Worked on gym which is a toolkit for developing and comparing reinforcement learning algorithms. Made project on cart-pole and hill climb.</p>
+                                <h5></h5>
+                                <p class="text-uppercase"></p>
                             </div>
                         </div>
                     </a>
                 </div>
             </div>
-
-            <div class="col-lg-4 spacing branding designing">
+            <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box mt-2">
-                    <a href="https://drive.google.com/open?id=17ZnM6DswnXsTZH5Y5AlOhffuhXnPbLJS" title="">
-                        <img class="item-container img-fluid mx-auto" src="images/Sentiment.png" alt="4" />
+                    <a href="" title="">
+                        <img class="item-container img-fluid mx-auto" src="images/" alt="1" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
-                                <h5>Sentiment Analysis</h5>
-                                <p class="text-uppercase">Created nlp based text analysis which classified imdb reviews as positive and negative.</p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-
-            <div class="col-lg-4 spacing branding designing">
-                <div class="item-box mt-2">
-                    <a href="https://drive.google.com/open?id=14sG6Ba6zWNW5PFonqAf3WzijzjEXhdXB" title="">
-                        <img class="item-container img-fluid mx-auto" src="images/YOLO.png" alt="5" />
-                        <div class="item-mask">
-                            <div class="item-caption text-white text-center">
-                                <h5>You only look once (YOLO)</h5>
-                                <p class="text-uppercase">Created a real-time object detection system, which when applied to my test video produced accurate results.</p>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-
-            <div class="col-lg-4 spacing photography">
-                <div class="item-box mt-2">
-                    <a href="https://drive.google.com/open?id=1_nqPhI1BxHhqdyMRh7u_l10UjiBOdUg6" title="">
-                        <img class="item-container img-fluid mx-auto" src="images/Neural-Spiral.png" alt="1" />
-                        <div class="item-mask">
-                            <div class="item-caption text-white text-center">
-                                <h5>Neural Spiral</h5>
-                                <p class="text-uppercase">Made a classifier which using matplotlib and neural networks, identified classes which had points spread out in a spiral manner.</p>
+                                <h5></h5>
+                                <p class="text-uppercase"></p>
                             </div>
                         </div>
                     </a>
