--- a/index.html
+++ b/index.html
@@ -462,12 +462,16 @@
         <div class="row container-grid projects-wrapper mt-4 pt-2">
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box mt-2">
-                    <a href="" title="">
-                        <img class="item-container img-fluid mx-auto" src="images/" alt="1" />
+                    <a href="https://github.com/JayantGoel001/AI-Image-Caption-Bot" target="_blank" title="">
+                        <img class="item-container img-fluid mx-auto" src="images/aiicb.png" alt="1" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
-                                <h5></h5>
-                                <p class="text-uppercase"></p>
+                                <h5>AI Image Caption Bot</h5>
+                                <p class="text-uppercase">
+                                    AI Image Caption Bot is a special project which uses almost every topic of data
+                                    science and Machine Learning. In this project, we can upload images and bot will
+                                    predict the caption of that image
+                                </p>
                             </div>
                         </div>
                     </a>
@@ -475,12 +479,16 @@
             </div>
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box mt-2">
-                    <a href="" title="">
-                        <img class="item-container img-fluid mx-auto" src="images/" alt="1" />
+                    <a href="https://github.com/JayantGoel001/A-Social-Media" target="_blank" title="">
+                        <img class="item-container img-fluid mx-auto" src="images/asm.png" alt="1" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
-                                <h5></h5>
-                                <p class="text-uppercase"></p>
+                                <h5>A Social Media</h5>
+                                <p class="text-uppercase">
+                                    A Social Media Is an application developed with MEAN Stack Development. In this
+                                    application, you can make friends ,besties and enemy, allow user to share their
+                                    thoughts as post and can chat through one-to-one messages.
+                                </p>
                             </div>
                         </div>
                     </a>
@@ -488,12 +496,14 @@
             </div>
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box mt-2">
-                    <a href="" title="">
-                        <img class="item-container img-fluid mx-auto" src="images/" alt="1" />
+                    <a href="https://github.com/JayantGoel001/School-Donation-Analysis" target="_blank" title="">
+                        <img class="item-container img-fluid mx-auto" src="images/sda.png" alt="1" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
-                                <h5></h5>
-                                <p class="text-uppercase"></p>
+                                <h5>A School Donation Analysis</h5>
+                                <p class="text-uppercase">
+                                    Using School Donation Datasets,I was able to Analysed and Visualized using numpy and pandas & plotly, Cufflinks and Matplotlib respectively.
+                                </p>
                             </div>
                         </div>
                     </a>
@@ -502,7 +512,7 @@
 
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box mt-2">
-                    <a href="" title="">
+                    <a href="" target="_blank" title="">
                         <img class="item-container img-fluid mx-auto" src="images/" alt="1" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
