--- a/index.html
+++ b/index.html
@@ -512,12 +512,14 @@
 
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box mt-2">
-                    <a href="" target="_blank" title="">
-                        <img class="item-container img-fluid mx-auto" src="images/" alt="1" />
+                    <a href="https://github.com/JayantGoel001/E-Commerce-Site" target="_blank" title="">
+                        <img class="item-container img-fluid mx-auto" src="images/ecs.png" alt="1" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
-                                <h5></h5>
-                                <p class="text-uppercase"></p>
+                                <h5>E-Commerce Site</h5>
+                                <p class="text-uppercase">
+                                    Created An E-Commerce Site using Reactjs, REDUX, HTML, CSS and JavaScript where a user can buy product, add it to cart and added PayPal Button to make payment.
+                                </p>
                             </div>
                         </div>
                     </a>
@@ -525,12 +527,15 @@
             </div>
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box mt-2">
-                    <a href="" title="">
-                        <img class="item-container img-fluid mx-auto" src="images/" alt="1" />
+                    <a href="https://github.com/JayantGoel001/AI-Music-Generation" target="_blank" title="">
+                        <img class="item-container img-fluid mx-auto" src="images/aimg.png" alt="1" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
-                                <h5></h5>
-                                <p class="text-uppercase"></p>
+                                <h5>AI Music Generation</h5>
+                                <p class="text-uppercase">
+                                    In this project we were able to generates melodious sound of piano by mixing different nodes
+                                    and chords By training on LSTM Model.
+                                </p>
                             </div>
                         </div>
                     </a>
@@ -538,12 +543,14 @@
             </div>
             <div class="col-lg-4 spacing branding designing development">
                 <div class="item-box mt-2">
-                    <a href="" title="">
-                        <img class="item-container img-fluid mx-auto" src="images/" alt="1" />
+                    <a href="https://github.com/JayantGoel001/URL-Shortner" target="_blank" title="">
+                        <img class="item-container img-fluid mx-auto" src="images/us.png" alt="1" />
                         <div class="item-mask">
                             <div class="item-caption text-white text-center">
-                                <h5></h5>
-                                <p class="text-uppercase"></p>
+                                <h5>URL Shortner</h5>
+                                <p class="text-uppercase">
+                                    Created An Web Application which help us to shorten the URL by using Firebase Firestore as Database and Bootstrap for Front end.
+                                </p>
                             </div>
                         </div>
                     </a>
